--- a/etc.dist/README
+++ b/etc.dist/README
@@ -59,12 +59,22 @@ This DIRECTORY contains explanations for various reasons for rejection.
 Refer to "reject" script for details on rejection reasons, names and
 files.
 
-The following copyright and licence notice applies to the files in
-this directory: Copyright 1996-2000 Igor Chudov. This document is
-licensed under the Creative Commons Attribution 4.0 International
-License. To view a copy of this license, visit
-http://creativecommons.org/licenses/by/4.0/ or send a letter to
-Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+The following copyright and licence notice applies to the following
+files in this directory:
+
+abuse
+charter
+crosspost
+harassing
+offtopic
+signature
+thread
+
+Copyright 1996-2000 Igor Chudov. This document is licensed under the
+Creative Commons Attribution 4.0 International License. To view a copy
+of this license, visit http://creativecommons.org/licenses/by/4.0/ or
+send a letter to Creative Commons, PO Box 1866, Mountain View, CA
+94042, USA.
 
 ==================================================> modack.approved
 
