--- a/local/README
+++ b/local/README
@@ -535,6 +535,9 @@ Share and Enjoy!
 License Terms:
 -------------
 
+Copyright 1995 Greg Rose, RoSecure Software, and
+other parties.
+
 This software is copyrighted by Greg Rose, RoSecure
 Software, and other parties.  The following terms
 apply to all files associated with the software
