--- a/etc.dist/README
+++ b/etc.dist/README
@@ -59,23 +59,6 @@ This DIRECTORY contains explanations for various reasons for rejection.
 Refer to "reject" script for details on rejection reasons, names and
 files.
 
-The following copyright and licence notice applies to the following
-files in this directory:
-
-abuse
-charter
-crosspost
-harassing
-offtopic
-signature
-thread
-
-Copyright 1996-2000 Igor Chudov. This document is licensed under the
-Creative Commons Attribution 4.0 International License. To view a copy
-of this license, visit http://creativecommons.org/licenses/by/4.0/ or
-send a letter to Creative Commons, PO Box 1866, Mountain View, CA
-94042, USA.
-
 ==================================================> modack.approved
 
 This shell script is used to send acknowledgments to posters whose messages
@@ -134,6 +117,17 @@ system of aliases than those that I recommend (a bad idea!).
 
 
 -------------------------------------------------------------------
+
+The following notice applies to this file and, to the extent that they
+are copyrightable, the following files in this directory:
+
+added-footer
+added-headers
+approval.key.txt
+email-server.cfg
+email-server.pwd
+mods.sig
+rejection-reasons.lst
 
 Copyright 1996-2000 Igor Chudov. This work is licensed under the
 Creative Commons Attribution 4.0 International License. To view a copy
