--- a/README
+++ b/README
@@ -1,6 +1,4 @@
 STUMP is a free robomoderator program for moderators of USENET
 newsgroups and mailing lists. 
 
-For installation instructions and general information, please see
-
-	http://www.algebra.com/~ichudov/stump/
+For installation instructions and general information, please see the docs section.
